Reverted some changes causing spacing/footer issues, added background colour to _app.js

--- a/project-app/styles/globals.css
+++ b/project-app/styles/globals.css
@@ -5,8 +5,6 @@
 body {
   overflow-x: hidden;
   width: 100vw;
-
-  background-color: #E6E5E4;
 }
 
 img {
@@ -14,7 +12,7 @@ img {
 }
 
 .geosearch {
-  background-color: rgba(255, 255, 255, 0.66);
+  background-color: #E6E5E4;
 }
 
 .leaflet-container {
